Se agrega un párrafo al documento html5

--- a/inicio.html
+++ b/inicio.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h3>Trabajando con GIT</h3>
+    <p>
+        Estamos aprendiendo a utilizar GIT sobre nuestros proyectos
+    </p>
 </body>
 </html>
