Se agregó checkbox

--- a/inicio.html
+++ b/inicio.html
@@ -11,5 +11,7 @@
     <p>
         Estamos aprendiendo a utilizar GIT sobre nuestros proyectos
     </p>
+    <input type="checkbox" id="opcion">
+    <label for="opcion">Seleccionar opción</label>
 </body>
 </html>
