Se agrega form con campo para rut

--- a/contacto.html
+++ b/contacto.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <form action="">
+        <h4>Ingrese un rut <input type="text" id="rut"></h4>
+    </form>
 </body>
 </html>
